--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "datejs": "^1.0.0-rc3",
     "gh-pages": "^4.0.0",
     "moment": "^2.29.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
