pakage.json name bug fixed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Project-Showcase",
+  "name": "project-showcase",
   "homepage": "https://UtkarshVijayvergia.github.io/Project-Showcase",
   "version": "0.1.0",
   "private": true,
